--- a/pom.xml
+++ b/pom.xml
@@ -4,30 +4,60 @@
 
     <groupId>net.ME1312</groupId>
     <artifactId>VanillaCord</artifactId>
-    <version>-PLACEHOLDER</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <repositories>
         <repository>
-            <id>minecraft-repo</id>
-            <url>https://libraries.minecraft.net/</url>
+            <id>bridge-github</id>
+            <url>https://maven.pkg.github.com/${bridge.owner}/Bridge</url>
         </repository>
         <repository>
-            <id>me1312-repo</id>
-            <url>https://dev.me1312.net/maven</url>
+            <id>minecraft-repo</id>
+            <url>https://libraries.minecraft.net/</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>me1312-repo</id>
-            <url>https://dev.me1312.net/maven</url>
+            <id>bridge-github</id>
+            <url>https://maven.pkg.github.com/${bridge.owner}/Bridge</url>
         </pluginRepository>
     </pluginRepositories>
 
     <properties>
-        <bridge.version>24w25a</bridge.version>
+        <bridge.owner>mark-e-deyoung</bridge.owner>
+        <bridge.version>0.1.0-SNAPSHOT</bridge.version>
+        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <surefire.plugin.version>3.2.5</surefire.plugin.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>bridge-owner-env</id>
+            <activation>
+                <property>
+                    <name>env.BRIDGE_OWNER</name>
+                </property>
+            </activation>
+            <properties>
+                <bridge.owner>${env.BRIDGE_OWNER}</bridge.owner>
+            </properties>
+        </profile>
+        <profile>
+            <id>bridge-version-env</id>
+            <activation>
+                <property>
+                    <name>env.BRIDGE_VERSION</name>
+                </property>
+            </activation>
+            <properties>
+                <bridge.version>${env.BRIDGE_VERSION}</bridge.version>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
@@ -39,13 +69,13 @@
         <dependency>
             <groupId>com.mojang</groupId>
             <artifactId>authlib</artifactId>
-            <version>1.5.16</version>
+            <version>6.0.53</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.0.10.Final</version>
+            <version>4.1.107.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -66,11 +96,18 @@
             <version>${bridge.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <directory>build</directory>
         <sourceDirectory>java</sourceDirectory>
+        <testSourceDirectory>test/java</testSourceDirectory>
         <resources>
             <resource>
                 <directory>resources</directory>
@@ -80,10 +117,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <release>${maven.compiler.release}</release>
                     <parameters>true</parameters>
                 </configuration>
             </plugin>
@@ -141,6 +177,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                </configuration>
             </plugin>
         </plugins>
     </build>
